Modifica index.html
insere tags h3 e p

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 
-    <h2>dev0</h2>
-
-    <h3>branch main</h3>
+    <h3> Branch dev0</h3>
+    <p>here is a test with merge</p>
     
 </body>
 </html>
